appId: host.exp.exponent
---
# Register
- runFlow: _restart.yaml
- tapOn: "Usuário"
- tapOn:
    id: "Criar conta"
- waitForAnimationToEnd
- tapOn: "Nome completo"
- inputText: "Maria Teste"
- tapOn: "CPF"
- inputText: "11122233344"
- hideKeyboard
- tapOn: "Senha"
- inputText: "123456"
- hideKeyboard
- tapOn: "Confirmar senha"
- inputText: "123456"
- hideKeyboard
- tapOn: "Criar Conta"
- tapOn: "Cadastrar"
- assertVisible: "Sucesso"
- tapOn: "OK"

# Restart app between tests
- runFlow: _restart.yaml
- tapOn: "Usuário"

# Login
- inputText: "11122233344"
- tapOn: "Senha"
- inputText: "123456"
- hideKeyboard
- tapOn: "Entrar"
